Submission Katalog Restoran

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HungerApps</title>
+    <title>InfoRestoranID</title>
 </head>
 
 <body>
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="header__inner">
             <h1 class="header__title">
-                Hunger Apps
+                INFO RESTORAN ID
             </h1>
         </div>
         <a id="menu" class="header__menu">☰</a>
@@ -38,81 +38,15 @@
         <section class="content">
             <div class="restaurant">
                 <h1 class="restaurant__label">Explore Restaurant</h1>
-                <div class="posts">
-                    <article class="post-item">
-                        <img src="./images/heros/hero-image_1.jpg" alt="gambar restaurant 1"
-                            class="post-item__thumbnail">
-                        <div class="post-item__content">
-                            <p class="post-item__date">About 10 Hours Ago By <a href="#"
-                                    class="post-item__date__author">Dicoding
-                                    Intern</a>
-                            </p>
-                            <h1 class="post-item__title"><a href="#">Kenapa Harus Belajar Coding Dari Sekarang?</a></h1>
-                            <p class="post-item__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                Aspernatur atque autem culpa laborum odio similique voluptas. A ab animi ducimus earum
-                                explicabo hic molestias repudiandae sunt. Consectetur consequuntur dolorum excepturi,
-                                fugit,
-                                minus nemo non quae quaerat quod recusandae reprehenderit totam, unde. Aliquid autem
-                                doloremque impedit quod tempora tenetur totam vero.</p>
-                        </div>
-                    </article>
-                    <article class="post-item">
-                        <img src="./images/heros/hero-image_2.jpg" alt="gambar restaurant 2"
-                            class="post-item__thumbnail">
-                        <div class="post-item__content">
-                            <p class="post-item__date">About 10 Hours Ago By <a href="#"
-                                    class="post-item__date__author">Dicoding
-                                    Intern</a>
-                            </p>
-                            <h1 class="post-item__title"><a href="#">Kenapa Harus Belajar Coding Dari Sekarang?</a></h1>
-                            <p class="post-item__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                Aspernatur atque autem culpa laborum odio similique voluptas. A ab animi ducimus earum
-                                explicabo hic molestias repudiandae sunt. Consectetur consequuntur dolorum excepturi,
-                                fugit,
-                                minus nemo non quae quaerat quod recusandae reprehenderit totam, unde. Aliquid autem
-                                doloremque impedit quod tempora tenetur totam vero.</p>
-                        </div>
-                    </article>
-                    <article class="post-item">
-                        <img src="./images/heros/hero-image_3.jpg" alt="gambar restaurant 3"
-                            class="post-item__thumbnail">
-                        <div class="post-item__content">
-                            <p class="post-item__date">About 10 Hours Ago By <a href="#"
-                                    class="post-item__date__author">Dicoding
-                                    Intern</a>
-                            </p>
-                            <h1 class="post-item__title"><a href="#">Kenapa Harus Belajar Coding Dari Sekarang?</a></h1>
-                            <p class="post-item__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                Aspernatur atque autem culpa laborum odio similique voluptas. A ab animi ducimus earum
-                                explicabo hic molestias repudiandae sunt. Consectetur consequuntur dolorum excepturi,
-                                fugit,
-                                minus nemo non quae quaerat quod recusandae reprehenderit totam, unde. Aliquid autem
-                                doloremque impedit quod tempora tenetur totam vero.</p>
-                        </div>
-                    </article>
-                    <article class="post-item">
-                        <img src="./images/heros/hero-image_4.jpg" alt="gambar restaurant 4"
-                            class="post-item__thumbnail">
-                        <div class="post-item__content">
-                            <p class="post-item__date">About 10 Hours Ago By <a href="#"
-                                    class="post-item__date__author">Dicoding
-                                    Intern</a>
-                            </p>
-                            <h1 class="post-item__title"><a href="#">Kenapa Harus Belajar Coding Dari Sekarang?</a></h1>
-                            <p class="post-item__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                Aspernatur atque autem culpa laborum odio similique voluptas. A ab animi ducimus earum
-                                explicabo hic molestias repudiandae sunt. Consectetur consequuntur dolorum excepturi,
-                                fugit,
-                                minus nemo non quae quaerat quod recusandae reprehenderit totam, unde. Aliquid autem
-                                doloremque impedit quod tempora tenetur totam vero.</p>
-                        </div>
-                    </article>
+                <!-- show Post from DATA -->
+                <div class="posts" id="restaurant-posting">
+                    
                 </div>
             </div>
         </section>
     </main>
     <footer>
-        <p>Copyright 2021 - Hunger Apps</p>
+        <p>Copyright © 2021 - InfoRestoranID</p>
     </footer>
 
 
