--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -50,6 +50,19 @@ body {
 }
 
 /*
+ * Drawer
+ */
+
+ #drawer {
+    transform: translate(-500px, 0);
+    transition: transform 0.3s ease-in-out;
+ }
+
+ #drawer.open {
+    transform: translate(0,0)     
+ }
+
+/*
  * Top level navigation
  */
  .nav {
@@ -119,6 +132,125 @@ body {
     font-weight: 300;
 }
 
-img {
-    display: block;
+/*
+ * main
+ */
+
+ main {
+    width: 100%;
+    margin: 0 auto;
 }
+
+/*
+ * content
+ */
+
+ .content {
+    padding: 32px;
+}
+
+/*
+ * restaurant
+ */
+
+ .restaurant {
+     width: 100%;
+     margin: 60px;
+     text-align: left;
+     
+ }
+
+ .restaurant__label {
+     font-size: 32px;
+     font-weight: lighter;
+ }
+
+ .restaurant__label::after{
+     content: '';
+     margin-top: 16px;
+     display: block;
+     border-bottom: 1px solid #eeeeee;
+ }
+
+ /*
+ * post
+ */
+
+.posts {
+    margin: 32px auto auto;
+    text-align: left;
+}
+
+/*
+ * post item
+ */
+
+ .post-item {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    width: 100%;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.post-item__content {
+    padding: 16px;
+}
+
+.post-city {
+    text-align: left;
+    font-weight: bolder;
+    font-size: large;
+}
+
+.post-item__thumbnail {
+    width: 100%;
+}
+
+.post-item__date {
+    font-size: 10px;
+    text-transform: uppercase;
+    color: #999;
+}
+
+.post-item__date__author {
+    color: red;
+    text-decoration: none;
+}
+
+.post-item__title {
+    font-weight: 500;
+    font-size: 16px;
+    margin-top: 16px;
+    transition: 0.3s opacity;
+}
+
+.post-item__title:hover {
+    opacity: 0.5;
+}
+
+.post-item__title a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.post-item__description {
+    margin-top: 16px;
+    font-size: 12px;
+    line-height: 1.5em;
+}
+
+/*
+ * footer
+ */
+
+ footer {
+    background-color: #2c3e50;
+    padding: 2em;
+    width: 100%;
+    text-align: center;
+}
+
+footer p{
+    color: #fff;
+}
+
