Submission Katalog Restoran Revisi

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <a href="#maincontent" class="skip-link">Menuju Konten</a>
     <!-- Header -->
     <header class="header">
         <div class="header__inner">
@@ -16,7 +17,7 @@
                 INFO RESTORAN ID
             </h1>
         </div>
-        <a id="menu" class="header__menu">☰</a>
+        <a id="menu" href="#" class="header__menu">☰</a>
     </header>
     <!-- Navigation -->
     <nav id="drawer" class="nav">
@@ -34,7 +35,7 @@
                 tara untuk mendapatkannya</p>
         </div>
     </div>
-    <main>
+    <main id="maincontent">
         <section class="content">
             <div class="restaurant">
                 <h1 class="restaurant__label">Explore Restaurant</h1>
