--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,6 @@
 * {
-    padding: 0;
-    margin: 0;
+    padding: unset;
+    margin: unset;
     box-sizing: border-box;
 }
 
@@ -16,6 +16,36 @@ body {
     font-size: 12px;
     color: #424242;
 }
+
+/*
+ * Skip to Content
+ *
+ */
+
+ .skip-link {
+    position: absolute;
+    top: -40px;
+    left: 0;
+    background-color: #bf1722;
+    color: white;
+    padding: 8px;
+    z-index: 100;
+ }
+
+ .skip-link {
+    position: absolute;
+    top: -40px;
+    left: 0;
+    background-color: #bf1722;
+    color: white;
+    padding: 8px;
+    z-index: 100;
+ }
+  
+ .skip-link:focus {
+    top: 0;
+ }  
+
 
 /*
  * Header
@@ -154,10 +184,7 @@ body {
  */
 
  .restaurant {
-     width: 100%;
-     margin: 60px;
-     text-align: left;
-     
+     width: 100%;               
  }
 
  .restaurant__label {
@@ -237,6 +264,12 @@ body {
     margin-top: 16px;
     font-size: 12px;
     line-height: 1.5em;
+}
+
+.tombol {
+    display: inline-block;
+    width: 44px;
+    height: 44px;
 }
 
 /*
