--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -231,6 +231,9 @@ body {
 
 .post-item__thumbnail {
     width: 100%;
+    height: 270px;
+    object-fit: cover;
+    object-position: center;
 }
 
 .post-item__date {
@@ -268,7 +271,7 @@ body {
 
 .tombol {
     display: inline-block;
-    width: 44px;
+    width: 100%;
     height: 44px;
 }
 
